modification needed to run on jdk 1.8